Working on work.

--- a/dev/index.html
+++ b/dev/index.html
@@ -54,87 +54,121 @@
                 <source src="./img/kuroshio540.mp4" type="video/mp4">
             </video>
         </section>
-        <section id="intro" class="section__row about">
+        <section id="intro" class="intro">
             <div class="section__content">
                 <h1 class="section__title section__title--iv">_ intro</h1>
 
-                <h2 class="about__declaration">
+                <h2 class="intro__declaration">
                     .jamie {
                 </h2>
-                <h2 class="about__subtitle">// builder of things</h2>
-                <h2 class="about__subtitle">// shark afficionado</h2>
-                <div class="about__bio al-image al-image--vc al-image--sa">
-                    <img class="about__image" src="./img/jamie-board.jpg" />
+                <h2 class="intro__subtitle">// builder of things</h2>
+                <h2 class="intro__subtitle">// shark afficionado</h2>
+                <div class="intro__bio al-image al-image--vc al-image--sa">
+                    <img class="intro__image" src="./img/jamie-board.jpg" />
                     <div class="flex__column flex--shrink">
-                        <div class="about__list">
-                            <h3 class="about__list-title"><i class="fa fa-info" aria-hidden="true"></i></h3>
+                        <div class="intro__list">
+                            <h3 class="intro__list-title"><i class="fa fa-info" aria-hidden="true"></i></h3>
                             <ul>
-                                <li class="about__list-item"><strong>gender:</strong> trans, non-binary;</li>
-                                <li class="about__list-item"><strong>pronouns:</strong> <a href="http://motto.time.com/4327915/gender-neutral-pronouns/" target="_blank">they/them</a> <span class="glc--r">!important</span>;</li>
-                                <li class="about__list-item"><strong>personality-boxes:</strong> ENT(P/J), Horse, 3, Libra;</li>
+                                <li class="intro__list-item"><strong>gender:</strong> trans, non-binary;</li>
+                                <li class="intro__list-item"><strong>pronouns:</strong> <a href="http://motto.time.com/4327915/gender-neutral-pronouns/" target="_blank">they/them</a> <span class="glc--r">!important</span>;</li>
+                                <li class="intro__list-item"><strong>personality-boxes:</strong> ENT(P/J), Horse, 3, Libra;</li>
                             </ul>
                         </div>
-                        <div class="about__list">
-                            <h3 class="about__list-title">∞</h3>
+                        <div class="intro__list">
+                            <h3 class="intro__list-title">∞</h3>
                             <ul>
-                                <li class="about__list-item"><strong>rpg-class:</strong> <span class="glc--y">"Rogue"</span>;</li>
-                                <li class="about__list-item"><strong>pokémon-starter:</strong> <span class="glc--y">"Charmander"</span>, fire;</li>
-                                <li class="about__list-item"><strong>coffee-color:</strong> black;</li>
+                                <li class="intro__list-item"><strong>rpg-class:</strong> <span class="glc--y">"Rogue"</span>;</li>
+                                <li class="intro__list-item"><strong>pokémon-starter:</strong> <span class="glc--y">"Charmander"</span>, fire;</li>
+                                <li class="intro__list-item"><strong>coffee-color:</strong> <span class="glc--y">#000</span>;</li>
                             </ul>
                         </div>
-                        <div class="about__list">
-                            <h3 class="about__list-title"><i class="fa fa-heart" aria-hidden="true"></i></h3>
+                        <div class="intro__list">
+                            <h3 class="intro__list-title"><i class="fa fa-heart" aria-hidden="true"></i></h3>
                             <ul>
-                                <li class="about__list-item"><strong>ig-usage:</strong> <a href="https://www.instagram.com/explore/tags/jamiesharkcooks/" target="_blank">food</a>;</li>
-                                <li class="about__list-item"><strong>instruments:</strong> violin, piano, guitar;</li>
+                                <li class="intro__list-item"><strong>ig-usage:</strong> <a href="https://www.instagram.com/explore/tags/jamiesharkcooks/" target="_blank">food</a>;</li>
+                                <li class="intro__list-item"><strong>instruments:</strong> violin, piano, guitar;</li>
                             </ul>
                         </div>
                     </div>
                 </div>
-                <h2 class="about__declaration">
+                <h2 class="intro__declaration">
                     };
                 </h2>
-                <h2 class="about__declaration">
+                <h2 class="intro__declaration">
                     .jelly {
                 </h2>
-                <h2 class="about__subtitle">// Border Collie mix</h2>
-                <h2 class="about__subtitle">// peanut butter afficionado</h2>
-                <div class="about__bio al-image al-image--vc al-image--sa">
-                    <img class="about__image" src="./img/jelly.png" />
+                <h2 class="intro__subtitle">// Border Collie mix</h2>
+                <h2 class="intro__subtitle">// peanut butter afficionado</h2>
+                <div class="intro__bio al-image al-image--vc al-image--sa">
+                    <img class="intro__image" src="./img/jelly.png" />
                     <div class="flex__column flex--shrink">
-                        <div class="about__list">
-                            <h3 class="about__list-title"><i class="fa fa-info" aria-hidden="true"></i></h3>
+                        <div class="intro__list">
+                            <h3 class="intro__list-title"><i class="fa fa-info" aria-hidden="true"></i></h3>
                             <ul>
-                                <li class="about__list-item"><strong>yes-this-is:</strong> dog;</li>
+                                <li class="intro__list-item"><strong>yes-this-is:</strong> dog;</li>
                             </ul>
                         </div>
-                        <div class="about__list">
-                            <h3 class="about__list-title">∞</h3>
+                        <div class="intro__list">
+                            <h3 class="intro__list-title">∞</h3>
                             <ul>
-                                <li class="about__list-item"><strong><span class="glc--r">@media</span> <span class="glc--g">all</span></strong> {</li>
-                                <li class="about__list-item about__list-item--indent"><strong>position:</strong> fixed;</li>
-                                <li class="about__list-item about__list-item--indent"><strong>content:</strong> <span class="glc--y">"nose prints"</span>;</li>
-                                <li class="about__list-item">};</li>
+                                <li class="intro__list-item"><strong><span class="glc--r">@media</span> <span class="glc--g">all</span></strong> {</li>
+                                <li class="intro__list-item intro__list-item--indent"><strong>position:</strong> fixed;</li>
+                                <li class="intro__list-item intro__list-item--indent"><strong>content:</strong> <span class="glc--y">"nose prints"</span>;</li>
+                                <li class="intro__list-item">};</li>
                             </ul>
                         </div>
-                        <div class="about__list">
-                            <h3 class="about__list-title"><i class="fa fa-heart" aria-hidden="true"></i></h3>
+                        <div class="intro__list">
+                            <h3 class="intro__list-title"><i class="fa fa-heart" aria-hidden="true"></i></h3>
                             <ul>
-                                <li class="about__list-item"><strong>true-love:</strong> <span class="glc--y">"peanut butter"</span>;</li>
-                                <li class="about__list-item"><strong>backup-love:</strong> cheese;</li>
+                                <li class="intro__list-item"><strong>true-love:</strong> <span class="glc--y">"peanut butter"</span>;</li>
+                                <li class="intro__list-item"><strong>backup-love:</strong> cheese;</li>
                             </ul>
                         </div>
                     </div>
                 </div>
-                <h2 class="about__declaration">
+                <h2 class="intro__declaration">
                     };
                 </h2>
             </div>
         </section>
-        <section id="work" class="section__content flex__column">
-            <div class="flex__row section__row section__header">
-                <h1>_ work</h1>
+        <section id="work">
+            <div class="section__content">
+                <h1 class="section__title">_ work</h1>
+                <div class="work__filter">
+                    <h2><img class="work__pokeball" src="./img/pokeball-sprite.png" /> Tech</h2>
+                    <h2><img class="work__pokeball" src="./img/pokeball-sprite.png" /> Talks</h2>
+                    <h2><img class="work__pokeball" src="./img/pokeball-sprite.png" /> Modeling</h2>
+                </div>
+                <div class="work__portfolio">
+                    <div class="work__card">
+                        <img class="work__img" src="./img/charizard-shot.jpg" />
+                        <h3 class="work__title">Beep boop</h3>
+                    </div>
+                    <div class="work__card">
+                        <img class="work__img" src="./img/charizard-shot.jpg" />
+                        <h3 class="work__title">Beep boop</h3>
+                    </div>
+                    <div class="work__card">
+                        <img class="work__img" src="./img/charizard-shot.jpg" />
+                        <h3 class="work__title">Beep boop</h3>
+                    </div>
+                    <div class="work__card">
+                        <img class="work__img" src="./img/charizard-shot.jpg" />
+                        <h3 class="work__title">Beep boop</h3>
+                    </div>
+                    <div class="work__card">
+                        <img class="work__img" src="./img/charizard-shot.jpg" />
+                        <h3 class="work__title">Beep boop</h3>
+                    </div>
+                    <div class="work__card">
+                        <img class="work__img" src="./img/charizard-shot.jpg" />
+                        <h3 class="work__title">Beep boop</h3>
+                    </div>
+                </div>
             </div>
+        </section>
+        <section id="work" class="section__content flex__column">
+
             <div class="flex__row section__row">
                 <p><em>tl;dr</em> - I'm available for hire as a technology consultant, speaker, or a model. You can also <a href="https://www.dropbox.com/s/uu7wfklc72yi0q7/ResumeJamie.pdf?dl=0" target="_blank">view my résumé</a>.</p>
             </div>
@@ -168,7 +202,7 @@
             </div>
             <div class="flex__column speaking__container">
                 <h2>Speaking Engagements</h2>
-                <div class="flex__row section__row flex--sa">
+<!--                 <div class="flex__row section__row flex--sa">
                     <div class="flex__item flex--shrink about__asset">
                         <img class="about__image" src="./img/jamie-angular-conference.jpg" />
                     </div>
@@ -178,7 +212,7 @@
                     <div class="flex__item flex--shrink about__asset">
                         <img class="about__image" src="./img/jamie-lwt-2.jpg" />
                     </div>
-                </div>
+                </div> -->
 
                 <div class="flex__item flex__row speaking__list">
                     <span class="flex__item flex--shrink speaking__year">2016</span>
