More css cleanup.

--- a/dev/index.html
+++ b/dev/index.html
@@ -22,22 +22,21 @@
 <body>
   <section class="hero">
     <div class="hero__drawing">
-      <svg id="rectangle" class="line-drawing" preserveAspectRatio="none" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 710 374">
+      <svg id="rectangle" class="hero__line" preserveAspectRatio="none" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 710 374">
         <path d="m -6.5883883,2.7054603 725.0078083,0 0,368.9433697 -725.0078083,0 z" />
       </svg>
-      <div data-svg="rectangle" class="hide"></div>
       <div class="hero__signature">
         <div class="hero__headline hide">
           <h1 class="hero__header">
             jamie chung
           </h1>
         </div>
-        <svg id="headline" class="line-drawing" width="560" height="120" viewBox="0 0 560 120" xmlns="http://www.w3.org/2000/svg">
-          <path class="darker" d="m20.714289,18.822632l518.571417,0c2.77002,0 5,2.22998 5,5l0,90.857178c0,2.769958 -2.22998,5 -5,5l-518.571417,0c-2.77,0 -5.000001,-2.230042 -5.000001,-5l0,-90.857178c0,-2.77002 2.23,-5 5.000001,-5z" />
+        <svg id="headline" class="hero__line" width="560" height="120" viewBox="0 0 560 120" xmlns="http://www.w3.org/2000/svg">
+          <path class="hero__line hero__line--darker" d="m20.714289,18.822632l518.571417,0c2.77002,0 5,2.22998 5,5l0,90.857178c0,2.769958 -2.22998,5 -5,5l-518.571417,0c-2.77,0 -5.000001,-2.230042 -5.000001,-5l0,-90.857178c0,-2.77002 2.23,-5 5.000001,-5z" />
         </svg>
         <svg version="1.0" xmlns="http://www.w3.org/2000/svg" id="signature" viewBox="0 0 375 121" preserveAspectRatio="none">
           <g transform="translate(0.000000,121.000000) scale(0.100000,-0.100000)" fill="#000000" stroke="none">
-          <path class="path" d="M2118 1195 c-2 -3 -42 -12 -89 -21 -79 -15 -113 -26 -184 -60 -86
+          <path d="M2118 1195 c-2 -3 -42 -12 -89 -21 -79 -15 -113 -26 -184 -60 -86
           -42 -147 -96 -171 -153 -19 -45 -18 -52 11 -95 14 -20 25 -41 25 -46 0 -5 -25
           -14 -56 -20 -48 -10 -58 -9 -73 4 -16 15 -21 14 -59 -4 -49 -24 -90 -26 -98
           -5 -8 19 -28 19 -58 0 -12 -8 -58 -18 -102 -22 -75 -6 -78 -5 -61 11 35 36 10
@@ -83,9 +82,10 @@
           150 63 191 69 70 11 186 6 208 -9z" />
           </g>
         </svg>
-
       </div>
+      <div class="hero__overlay hide" />
     </div>
+
   </section>
   <section>
     <h1>Title</h1>
